--- a/AiLab/static/css/base.css
+++ b/AiLab/static/css/base.css
@@ -7,10 +7,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    min-height: 4vh;
+}
+
+body.dark-mode .header {
+    background: linear-gradient(to right, #434343, #222222);
+    color: #fff;
 }
 
 .logo-block{
     display: flex;
+    position: absolute;
+    left: 45%;
+    transform: translateX(-45%);
 }
 
 .logo-style{
@@ -27,6 +37,20 @@
     margin-left: 1rem;
 }
 
+/* Ночной режим */
+
+body.dark-mode {
+    background-color: #222;
+    color: #eee;
+}
+
+.night-mode {
+    cursor: pointer;
+    font-size: 28px;
+    position: absolute;
+    right: 2%;
+}
+
 
 /* Подвал */
 
@@ -36,4 +60,31 @@
     border-radius: 10px;
     margin: 20px auto;
     width: 80%;
+}
+
+.profile-icon img {
+    width: 50px;  /* Размер */
+    height: 50px;
+    border-radius: 50%;  /* Делаем круглым */
+    object-fit: cover;  /* Чтобы картинка не искажалась */
+    border: 2px solid white; /* Граница, если нужна */
+    transition: transform 0.2s ease-in-out;
+}
+
+.profile-icon img:hover {
+    transform: scale(1.1); /* Анимация увеличения при наведении */
+}
+.profile-icon {
+    position: absolute;
+    left: 56%;
+    transform: translateX(-56%);
+}
+
+.ide-link {
+    cursor: pointer;
+    font-size: 28px;
+}
+
+a {
+    text-decoration: none;
 }
