--- a/AiLab/templates/base.html
+++ b/AiLab/templates/base.html
@@ -16,28 +16,33 @@
 
 <body>
     <div class="header">
+        {% if current_endpoint != 'main_bp.ide' %}
+        <div class="ide-link"><a href="{{ url_for('main_bp.ide') }}">💻</a></div>
+        {% endif %}
+
         <div class="logo-block">
             <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo-style">
             <div class="header-title">AiLab WEB</div>
-            {% if current_user.is_anonymous %}
-            <a href="{{ url_for('main_bp.login') }}">Login</a>
-            {% else %}
-            <a href="{{ url_for('main_bp.logout') }}">Logout</a>
-            {% endif %}
         </div>
+        {% if current_endpoint != 'main_bp.profile' %}
+        <a href="{{ url_for('main_bp.profile', id=current_user.id) }}" class="profile-icon">
+            <img src="{{ url_for('static', filename='img/test.png') }}" alt="Профиль">
+        </a>    
+        {% endif %}
+        
 
         <div class="night-mode">🌙</div>
     </div>
 
     {% block content %}
     {% endblock %}
-    
+<!--     
     <div class="footer">
-    </div>
+    </div> -->
 
     {% block scripts %}
     {% endblock %}
-
+    <script src="{{ url_for('static', filename='js/base.js') }}"></script>
     
 </body>
 
